[package]
name = "cindex"
description = "CSV indexing library"
version = "0.1.2"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/simhyeon/cindex"
repository = "https://github.com/simhyeon/cindex"
keywords = ["text-processing", "csv", "indexing"]
categories = ["text-processing"]

[lib]
name = "cindex"
path = "src/lib.rs"

[features]
default = ["rayon"]

[dependencies]
rayon = { version = "1.5.1", optional = true}
thiserror = "1.0.25"
indexmap = "1.6.2"
