[package]
name = "cindex"
description = "CSV indexing library"
version = "0.5.2-rc1"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/simhyeon/cindex"
repository = "https://github.com/simhyeon/cindex"
keywords = ["text-processing", "csv", "indexing"]
categories = ["text-processing"]

[lib]
name = "cindex"
path = "src/lib.rs"

[dependencies]
dcsv = { version = "0.3.3-rc2", git="https://github.com/simhyeon/dcsv"}
rayon = { version = "1.5.1", optional = true}
regex = "1.10.2"
